# simple-chatbot-pydantic-ai

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: linting.yaml  tests.yaml
simple_chatbot_pydantic_ai/: __main__.py  main.py
tests/unit/utils/: test_logger.py
