[project]
name = "simple_chatbot_pydantic_ai"
version = "0.1.0"
description = "A simple chatbot using PydanticAI, FastAPI and Logfire"
authors = [
  {name = "Daniel Bailo", email = "danbailoufms@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.11.4",
    "pydantic-ai[logfire]>=0.1.11",
    "fastapi[standard]>=0.115.12",
    "logfire[fastapi,httpx]>=3.15.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "mypy-extensions>=1.0.0",
    "bandit>=1.8.3",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
sort="Cover"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "F", "T100"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.pylint]
max-returns = 2

[tool.mypy]
no_implicit_optional = true
plugins = [
  "pydantic.mypy"
]
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simple_chatbot_pydantic_ai"]
